# listmonk-rss

./: .gitignore  Makefile  README.md  architecture.puml  html  linkmonk_rss.py  listmonk_rss.py  newsletter.py  newsletter_template.md.j2  pyproject.toml  python  template.md.j2  toml
.claude/: settings.local.json
.github/workflows/: linkmonk_rss.yml  listmonk_rss.yml
assets/C4/: architecture.puml
email-templates/: book-template.html  email-template.html
